--- a/css/medium.css
+++ b/css/medium.css
@@ -1,86 +1,79 @@
 /*NAVIGATION*/
-
 .nav-mobile {
-    display: none;
+  display: none;
 }
 
 .nav-desktop {
-    display: block;
+  display: block;
 }
 
 .nav-desktop ul {
-    font-size: 0;
+  font-size: 0;
 }
 
 .nav-desktop li {
-    display: inline-block;
-
-    font-size: 16px;
-    list-style: none;
+  display: inline-block;
+  font-size: 16px;
+  list-style: none;
 }
 
 .nav-desktop li a {
-    padding: 20px 30px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    transition: color .3s;
+  padding: 20px 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: color .3s;
+  transition: color .3s;
 }
 
 /*HEADER*/
-
 .header-img {
-    background-image: url('../img/header2.jpg');
+  background-image: url("../img/header2.jpg");
 }
 
 /*MAIN*/
-
 section .trees-list {
-    width: 49%;
+  width: 49%;
 }
 
 .first-list {
-    background-image: url('../img/Main5.jpg');
+  background-image: url("../img/Main5.jpg");
 }
 
 .second-list {
-    background-image: url('../img/main8.jpg');
+  background-image: url("../img/main8.jpg");
 }
 
 .third-list {
-    background-image: url('../img/main11.jpg');
+  background-image: url("../img/main11.jpg");
 }
 
 .fourth-list {
-    background-image: url('../img/Main5.jpg');
+  background-image: url("../img/Main5.jpg");
 }
-
 
 /*RWD settings*/
-
-@media (min-width:768px) {
-    body footer .underline h2 {
-        font-size: 30px;
-    }
-
-    div.contact p {
-        font-size: 20px;
-    }
-
-    body footer p {
-        font-size: 18px;
-    }
+@media (min-width: 768px) {
+  body footer .underline h2 {
+    font-size: 30px;
+  }
+  div.contact p {
+    font-size: 20px;
+  }
+  body footer p {
+    font-size: 18px;
+  }
 }
 
-@media (min-width:920px) {
-    .header-text h1 {
-        margin-top: 3%;
-        margin-left: 550px;
-        font-size: 45px;
-    }
-
-    .header-text p {
-        margin-left: 550px;
-        font-size: 20px;
-    }
+@media (min-width: 920px) {
+  .header-text h1 {
+    margin-top: 3%;
+    margin-left: 550px;
+    font-size: 45px;
+  }
+  .header-text p {
+    margin-left: 550px;
+    font-size: 20px;
+  }
 }
+/*# sourceMappingURL=medium.css.map */
