--- a/css/style.css
+++ b/css/style.css
@@ -1,222 +1,223 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: 'Comfortaa',
-        cursive;
-        background-image: linear-gradient(180deg, rgba(0, 0, 0, .1) 75%, rgba(50, 68, 26, .8) 95%);
+  font-family: 'Comfortaa' cursive;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(75%, rgba(0, 0, 0, 0.1)), color-stop(95%, rgba(50, 68, 26, 0.8)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 75%, rgba(50, 68, 26, 0.8) 95%);
 }
 
 section {
-    margin: 50px 0;
+  margin: 50px 0;
 }
 
 .underline {
-    position: relative;
-    text-align: center;
+  position: relative;
+  text-align: center;
 }
 
 .line {
-    position: absolute;
-    left: calc(50% - 30px);
-    bottom: -5px;
-    height: 3px;
-    width: 60px;
-    background-color: rgb(34, 190, 240);
-    transition: width .3s, left .3s;
+  position: absolute;
+  left: calc(50% - 30px);
+  bottom: -5px;
+  height: 3px;
+  width: 60px;
+  background-color: #22bef0;
+  -webkit-transition: width .3s, left .3s;
+  transition: width .3s, left .3s;
 }
 
-h2:hover~.line {
-    left: calc(50% - 70px);
-    width: 140px;
+.line h2:hover ~ .line {
+  left: calc(50% - 70px);
+  width: 140px;
 }
 
 /*NAVIGATION*/
-
 nav {
-    position: sticky;
-    top: 0;
-    height: 60px;
-    background-color: rgb(50, 68, 26);
-    text-align: center;
-    line-height: 60px;
-     z-index: 1;    
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  height: 60px;
+  background-color: #32441a;
+  text-align: center;
+  line-height: 60px;
+  z-index: 1;
 }
 
-
 .nav-mobile {
-    margin-left: calc(100% - 60px);
+  margin-left: calc(100% - 60px);
 }
 
 a:link {
-    color: rgb(134, 190, 140);
+  color: #86be8c;
 }
 
 a:visited {
-    color: rgb(134, 190, 140);
+  color: #86be8c;
 }
 
 .nav-desktop li a:hover {
-    color: rgb(34, 190, 240);
-
+  color: #22bef0;
 }
 
 .nav-mobile button {
-    padding: 5px 15px;
-    font-size: 30px;
-    line-height: 60px;
-    background: none;
-    border: none;
-    color: rgb(134, 190, 140);
-
+  padding: 5px 15px;
+  font-size: 30px;
+  line-height: 60px;
+  background: none;
+  border: none;
+  color: #86be8c;
 }
 
-
 /*HEADER*/
-
 .header-img {
-    position: relative;
-    height: 300px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: left;
-    background-size: cover;
-
+  position: relative;
+  height: 300px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
 }
 
 .header-bg {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .3);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .header-text {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    display: block;
-    width: 100%;
-    text-align: center;
-    transform: translateX(-50%);
-    color: white;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  display: block;
+  width: 100%;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  color: white;
 }
 
 .header-text h1 {
-    padding-bottom: 20px;
-    text-shadow: 5px 5px 10px #fff;
+  padding-bottom: 20px;
+  text-shadow: 5px 5px 10px #fff;
 }
 
 .header-text p {
-    text-shadow: 5px 5px 10px #fff;
+  text-shadow: 5px 5px 10px #fff;
 }
 
 .header-text span {
-    text-transform: uppercase;
-    color: rgb(34, 190, 240);
+  text-transform: uppercase;
+  color: #22bef0;
 }
 
 /*MAIN*/
-
 .wrapper {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .main {
-    font-size: 0;
-    text-align: center;
+  font-size: 0;
+  text-align: center;
 }
 
 .main h2 {
-    margin: 20px 0;
-    color: black;
-    font-size: 46px;
-    text-transform: uppercase;
-    font-weight: bold;
+  margin: 20px 0;
+  color: black;
+  font-size: 46px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .main-bg {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .7);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .about-me {
-    margin: 40px 20px;
-    text-align: center;
+  margin: 40px 20px;
+  text-align: center;
 }
 
 .about-me h2 {
-    margin-bottom: 20px;
-    text-align: center;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .trees-list {
-    display: inline-block;
-    position: relative;
-    height: 300px;
-    width: 100%;
-    margin: 2px;
-    transition: transform .6s;
+  display: inline-block;
+  position: relative;
+  height: 300px;
+  width: 100%;
+  margin: 2px;
+  -webkit-transition: -webkit-transform .6s;
+  transition: -webkit-transform .6s;
+  transition: transform .6s;
+  transition: transform .6s, -webkit-transform .6s;
 }
 
 .trees-list:hover {
-    cursor: pointer;
-    transform: scale(.95);
+  cursor: pointer;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
 .first-list,
 .second-list,
 .third-list,
 .fourth-list {
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 84%;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 84%;
 }
 
 .trees-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-    text-shadow: 5px 5px 10px #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  text-shadow: 5px 5px 10px #fff;
 }
 
 .trees-text h3 {
-    text-transform: uppercase;
-    font-size: 24px;
-    margin-bottom: 20px;
-    transition: font-size .6s;
+  text-transform: uppercase;
+  font-size: 24px;
+  margin-bottom: 20px;
+  -webkit-transition: font-size .6s;
+  transition: font-size .6s;
 }
 
 .trees-list:hover h3 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .trees-text p {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .contact {
-    margin-top: 20px;
+  margin-top: 20px;
 }
-
 
 /*FOOTER*/
-
 footer {
-    height: 150px;
-    text-align: center;
-    background-color: #32441A;
-    color: rgb(134, 190, 140);
+  height: 150px;
+  text-align: center;
+  background-color: #32441A;
+  color: #86be8c;
 }
+/*# sourceMappingURL=style.css.map */
