--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Comfortaa' cursive;
+  font-family: 'Comfortaa', cursive;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(75%, rgba(0, 0, 0, 0.1)), color-stop(95%, rgba(50, 68, 26, 0.8)));
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 75%, rgba(50, 68, 26, 0.8) 95%);
 }
