--- a/style.sass
+++ b/style.sass
@@ -7,7 +7,7 @@ html
     scroll-behavior: smooth
 
 body
-    font-family: 'Comfortaa' cursive
+    font-family: 'Comfortaa', cursive
     background-image: linear-gradient(180deg, rgba(0, 0, 0, .1) 75%, rgba(50, 68, 26, .8) 95%)
 
 section
@@ -26,9 +26,9 @@ section
     background-color: rgb(34, 190, 240)
     transition: width .3s, left .3s
 
-    h2:hover~.line
-        left: calc(50% - 70px)
-        width: 140px
+    h2: hover~.line
+    left: calc(50% - 70px)
+    width: 140px
 
 /*NAVIGATION*/
 
