--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,6 @@ section {
   background-color: #22bef0;
   -webkit-transition: width .3s, left .3s;
   transition: width .3s, left .3s;
-}
-
-.line h2:hover ~ .line {
   left: calc(50% - 70px);
   width: 140px;
 }
@@ -69,12 +66,23 @@ a:visited {
 }
 
 .nav-mobile button {
-  padding: 5px 15px;
-  font-size: 30px;
   line-height: 60px;
-  background: none;
   border: none;
-  color: #86be8c;
+}
+
+.nav-logo {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  width: 50px;
+  height: 50px;
+  -webkit-transition: 4s ease-in-out;
+  transition: 4s ease-in-out;
+}
+
+.nav-logo:hover {
+  -webkit-transform: rotate(720deg);
+          transform: rotate(720deg);
 }
 
 /*HEADER*/
