--- a/style.sass
+++ b/style.sass
@@ -26,7 +26,7 @@ section
     background-color: rgb(34, 190, 240)
     transition: width .3s, left .3s
 
-    h2: hover~.line
+    h2:hover~.line
     left: calc(50% - 70px)
     width: 140px
 
@@ -54,12 +54,22 @@ a:visited
     color: rgb(34, 190, 240)
 
 .nav-mobile button
-    padding: 5px 15px
-    font-size: 30px
+    // padding: 5px 15px
     line-height: 60px
-    background: none
+    // background: none
     border: none
-    color: rgb(134, 190, 140)
+    // color: rgb(134, 190, 140)
+
+.nav-logo
+    position: absolute
+    top: 5px
+    right: 15px
+    width: 50px
+    height: 50px
+    transition: 4s ease-in-out
+
+.nav-logo:hover
+    transform: rotate(720deg)
 
 /*HEADER*/
 
